# restrict

./: .clippy.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  ptracelog
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
docs/: README.md
docs/examples/: ptrace_raw_syscall_interception.rs
examples/: example.rs  example_01_write.rs  example_02_openat.rs  example_03.rs  example_04_openat_errno.rs  example_05_syscall_trace.rs  example_06_mul_tracing.rs  example_07_command.rs  example_intercept.rs  example_logs.rs  example_metrics.rs  example_mul_tracing.rs  migration.rs  prometheus_metrics.rs  truncate_filter.rs
src/: error.rs  interceptor.rs  lib.rs  logging.rs  metrics.rs  policy.rs  registers.rs  syscall.rs  tracer.rs  wrapper.rs
src/filter/: intercept.rs  mod.rs  seccomp.rs  tracer.rs
src/modules/: mod.rs  module.rs
tests/: basic_filter.rs  deny_rules.rs  intercept_tests.rs
tests/src/: create_file.rs
tests/test_bins/: blocked_ptrace_test.rs  count_trace.rs  fake_getpid.rs  fake_getuid.rs  fake_time.rs
