[package]
name = "restrict" 
version = "0.1.0"
edition = "2021" 
description = "A short, concise description of what your crate does." 
license = "MIT"
repository = "https://github.com/x0rw/restrict"
documentation = "https://docs.rs/restrict/latest"
readme = "README.md"   
keywords = ["sandbox", "linux", "security", "syscall", "policy", "restriction"]
categories = ["os::linux-apis", "api-bindings", "security"] 
authors = ["x0rw <mahdi.svt5@gmail.com>"] 
build = 'build.rs'

[dependencies]
libseccomp-sys = "0.3.0"
thiserror = "1"
[lib]
name = "restrict"

[build-dependencies]
regex = "1.11.1"

[[bin]]
name = "create_file_test"
path = "tests/src/create_file.rs"
